# football-ai-agent

./: .env  .env.example  .gitignore  00_CONTEXT.md  01_RULES.md  02_ARCHITECTURE.md  03_TASK_LIST.md  04_OUTPUT_FORMAT.md  05_TECH_STACK.md  06_DEFINITION_OF_DONE.md  Dockerfile  news.json  pyproject.toml  requirements-dev.txt  requirements.txt
src/news_collector/: __init__.py  cli.py  collector.py  config.py  models.py  parser.py  storage.py
tests/: test_news_collector.py  test_rss_parser.py
