[project]
name = "football-ai-agent"
version = "0.1.0"
description = "AI football YouTube automation agent"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.1",
    "ruff>=0.5.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["feedparser"]
ignore_missing_imports = true

[project.scripts]
collect-news = "news_collector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/news_collector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.black]
line-length = 88
target-version = ["py312"]
